# 2Q-cache

./: .gitignore  CMakeLists.txt  README.md
Cache/benchmark/: CMakeLists.txt  cache_2q_benchmark.cpp  ideal_cache_benchmark.cpp
Cache/includes/: cache_2q.hpp  cache_2q_impl.hpp  ideal_cache.hpp  ideal_cache_impl.hpp
cmake/: ClangFormat.cmake
run_caches/: CMakeLists.txt  run_cache_2q.cpp  run_ideal_cache.cpp
tests/: CMakeLists.txt  t.cpp  tests_for_caches.cpp
